--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<b><h1>Yes.</h1></b>
+<!DOCTYPE html>
+<html>
+<body>
+
+<form action="demo_form.asp">
+Search: <input type="text" name="FirstName" value=""><br>
+<a href="https://gabewert.github.io/yes/yes.html" style="text-decoration:none">
+   <input type="button" value="Submit"/>
+</a>
+</form>
+
+</body>
+</html>
+
+
