--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <form action="demo_form.asp">
-Search: <input type="text" name="FirstName" value=""><br>
+Ask: <input type="text" name="FirstName" value=""><br>
 <a href="https://gabewert.github.io/yes/yes.html" style="text-decoration:none">
    <input type="button" value="Submit"/>
 </a>
