--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <form action="demo_form.asp">
 Ask: <input type="text" name="FirstName" value=""><br>
 <a href="https://gabewert.github.io/yes/yes.html" style="text-decoration:none">
-   <input type="button" value="Submit"/>
+   <input type="button" value="Ask"/>
 </a>
 </form>
 
